--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@smartweb/vue-flash-message": "^0.6.4",
     "axios": "^0.21.1",
+    "ckeditor4-vue": "^1.3.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
