--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "ckeditor4-vue": "^1.3.1",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
     "vue-router": "^3.3.4",
