--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ckeditor4-vue": "^1.3.1",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "v-file-input": "^0.1.2",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
     "vue-router": "^3.3.4",
