--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^28.0.0",
+    "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "@smartweb/vue-flash-message": "^0.6.4",
     "axios": "^0.21.1",
     "ckeditor4-vue": "^1.3.1",
