--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ckeditor4-vue": "^1.3.1",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "v-calendar": "^2.3.2",
     "v-file-input": "^0.1.2",
     "vue": "^2.6.11",
