--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "axios": "^0.21.1",
         "ckeditor4-vue": "^1.3.1",
         "core-js": "^3.6.5",
+        "html2canvas": "^1.4.1",
         "jquery": "^3.6.0",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.5.23",
         "moment": "^2.29.1",
         "v-calendar": "^2.3.2",
         "v-file-input": "^0.1.2",
