--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "v-calendar": "^2.3.2",
         "v-file-input": "^0.1.2",
         "vue": "^2.6.14",
+        "vue-country-flag": "^2.3.2",
         "vue-headful": "^2.1.0",
         "vue-picture-swipe": "^2.1.0",
         "vue-router": "^3.3.4",
