--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,7 +38,7 @@ jobs:
           sshpass -p ${{ secrets.SERVER_PASSWORD }} \
           ssh -o StrictHostKeyChecking=no \
           -p 223 \
-          root@${{ secrets.SERVER_IP }} kubectl set image deployment/vuejs-sitio-actions vuejs-sitio-actions=akuster/vuejs-sitio-actions:latest
+          root@${{ secrets.SERVER_IP }} source /home/script-vue-sitio.sh
 
 
   
